feat: require a valid spouse email
